Fix weird text wrapping on (e.g.) Chromium and iOS

--- a/assets/main.css
+++ b/assets/main.css
@@ -221,6 +221,7 @@ iframe.youtube-vid {
   color: #666;
   display: table-cell;
   padding-right: .33ch;
+  white-space: nowrap;
 }
 
 .post-list-link {
